# jwt-visualiser

./: .gitignore  DEPLOYMENT.md  README.md
backend/: .dockerignore  .gitignore  Dockerfile  KNOWLEDGE_BASE_GUIDE.md  LEARNING_GUIDE.md  OLLAMA_SETUP.md  README.md  fly.toml  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: knowledge_routes.py  routes.py  schemas.py
backend/app/core/: config.py
backend/app/jwt/: analysis.py  decoder.py  generator.py
backend/app/llm/: base.py  factory.py  gemini_adapter.py  groq_adapter.py  mock_adapter.py  ollama_adapter.py  ollama_setup.py  openai_adapter.py  prompts.py  session_manager.py
backend/app/middleware/: __init__.py  rate_limiter.py
backend/app/vector/: base.py  chroma_adapter.py  document_processor.py  ingestion_service.py  qa_store.py  web_scraper.py
backend/scripts/: ingest_jwt_knowledge.py  manage_qa_history.py  setup_ollama.py
frontend/: README.md  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/ask/: page.tsx
frontend/app/decode/: page.tsx
frontend/app/generate/: page.tsx
frontend/app/visualise/: page.tsx
frontend/components/features/: ClaudeText.tsx  RateLimitIndicator.tsx  SampleTokenHero.tsx
frontend/components/layout/: JwtTokenBar.tsx  SessionPanel.tsx
frontend/lib/: api.ts
frontend/store/: chatStore.ts  jwtStore.ts
frontend/utils/: api.ts
