[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Backend for JWT Visualiser with RAG and Analysis capabilities"
authors = ["Dhanush <dhanush.atwork@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
python-dotenv = "^1.0.0"

# JWT Handling
pyjwt = "^2.8.0"
cryptography = "^42.0.0"  # Required for some PyJWT algorithms (RSA/ECDSA)

# Data Validation
pydantic = "^2.6.0"
pydantic-settings = "^2.2.0"

# LLM & Vector DB (RAG)
langchain = "^0.1.10"
langchain-openai = "^0.0.8"
langchain-google-genai = "^0.0.9" # For Gemini support
langchain-huggingface = "^0.0.1"  # Free local embeddings
chromadb = "^0.4.24"              # Local vector storage
tiktoken = "^0.12.0"               # Token counting
sentence-transformers = "^2.6.0"  # Required for HuggingFace embeddings
httpx = "^0.27.0"                 # For Ollama API communication

# Web Scraping for Knowledge Ingestion
beautifulsoup4 = "^4.12.0"        # HTML parsing
lxml = "^4.9.0"                   # XML/HTML parser

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
httpx = "^0.27.0"
black = "^24.2.0"
isort = "^5.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"